Fix sizing issues on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,8 +109,6 @@ body {
     border-style: solid;
     align-content: center;
     border-radius: 50%;
-    /* height: 100%; */
-    width: 2em;
 }
 
 .enabled {
@@ -158,7 +156,7 @@ body {
 /* display the background img to card if not flipped*/
 .flipped {
     /* to show images from the card */
-    font-size: 3em;
+    font-size: 2.7em;
     /* add animation when card flipped */
     transform: rotateY(180deg);
 
